/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'maven-publish'
}
group = 'us.ampre'
version = '1.1.0-GCP-SNAPSHOT'
description = 'Java Rets Client'
java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    api 'jdom:jdom:1.1'
    api 'commons-lang:commons-lang:2.6'
    api 'commons-codec:commons-codec:1.16.0'
    api 'com.google.guava:guava:32.1.2-jre'
    api 'org.apache.httpcomponents:httpclient:4.5.14'
    api 'org.apache.httpcomponents:httpcore:4.4.16'

//    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.2.1'
//    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5-h2', version: '5.2.1'

    compileOnly 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'junit:junit:4.13.2'
}

repositories {
    // AMP Nexus Repos
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/Shibboleth-Proxy/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/maven-central/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/AMP-Release-Maven/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/AMP-Snapshot-Maven/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/AMP-Snapshot-Maven-GCP/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
    maven {
        url = 'https://nexus.dev.ampre.ca/repository/third-party/'
        credentials {
            username = nexusTokenUser
            password = nexusTokenPassword
        }
        authentication {
            basic(BasicAuthentication)
        }
    }
}

publishing {
    publications {
        ampapi(MavenPublication) {
            artifact bootJar
            from components.java
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }

    repositories {
        maven {
            if (project.version.endsWith('-GCP-SNAPSHOT')) {
                url = 'https://nexus.dev.ampre.ca/repository/AMP-Snapshot-Maven-GCP/'
            } else if (project.version.endsWith('-SNAPSHOT')) {
                url = 'https://nexus.dev.ampre.ca/repository/AMP-Snapshot-Maven/'
            } else {
                url = 'https://nexus.dev.ampre.ca/repository/AMP-Snapshot-Maven-GCP/'
            }
            credentials {
                username = nexusTokenUser
                password = nexusTokenPassword
            }
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}


bootRun {
    systemProperty("spring.profiles.active", "local")
    systemProperty("spring.profiles.active", "paul")
    systemProperty("polyglot.engine.WarnInterpreterOnly", "false")
}

test {
    useJUnitPlatform()
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
